backend_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    appName: yolobackend
    serverClass : backend
spec:
  selector:
    matchLabels:
      app: backendapp
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: backendapp
        tier: backend
        track: stable
    spec:
      containers:
        - name: backendapp
          image: "gichangi/ip2_backend_image:1.0.2"
          ports:
            - name: http
              containerPort: 5000
