backend_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backendservice
spec:
  type: ClusterIP
  selector:
    app: backendapp
    tier: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
