frontend_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontendservice23
spec:
  selector:
    app: frontendapp
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
